# flylinkdc-hub

./: .gitignore  .travis.yml  Astyle-run.bat  Astyle-tab.bat  Astyle.bat  CMakeLists.txt  Changelog.txt  PtokaX-gui.sln  PtokaX-gui.vcxproj  PtokaX-gui.vcxproj.filters  PtokaX.sln  PtokaX.vcxproj  PtokaX.vcxproj.filters  README.md  ReadMe.txt  build-ptokax-win32-vc2010.bat  build-ptokax-win32-vc2013.bat  build-ptokax-win32-vc2017.bat  compile-run-hub  compile-run-hub-centos  compile-run-hub-centos-no-pvs  compile-run-hub-debian  compile-static  compile.txt  makefile-sqlite  makefile-sqlite-centos  run-ptokax  run-ptokax-debug  run-ptokax-malloc  src-exclude.txt  src-gen-filename.bat  strace_out
cfg.example/: BanList.xml  RegisteredUsers.xml  Settings.pxt
civetweb/: civetweb.c  civetweb.h
compiled/cfg/: get_geo_ip.bat
core/: CriticalSection.h  DB-MySQL.cpp  DB-MySQL.h  DB-PostgreSQL.cpp  DB-PostgreSQL.h  DB-SQLite.cpp  DB-SQLite.h  DcCommands.cpp  DcCommands.h  DeFlood.cpp  DeFlood.h  ExceptionHandling.cpp  ExceptionHandling.h  GlobalDataQueue.cpp  GlobalDataQueue.h  HubCommands-AE.cpp  HubCommands-FH.cpp  HubCommands-IQ.cpp  HubCommands-RZ.cpp  HubCommands.cpp  HubCommands.h  IP2Country.cpp  IP2Country.h  LanguageIds.h  LanguageManager.cpp  LanguageManager.h  LanguageStrings.h  LanguageXml.h  LuaBanManLib.cpp  LuaBanManLib.h  LuaCoreLib.cpp  LuaCoreLib.h  LuaIP2CountryLib.cpp  LuaIP2CountryLib.h  LuaInc.h  LuaProfManLib.cpp  LuaProfManLib.h  LuaRegManLib.cpp  LuaRegManLib.h  LuaScript.cpp  (+65 more)
doctor-dump/: CrashRpt.h
fly-server-test-port/: CDBManager.cpp  CDBManager.h  fly-server-test-port.cpp
fuzztest/: dc-fuzzer.py
grafana/: dashboard.json
gui.win/: AboutDialog.cpp  AboutDialog.h  BanDialog.cpp  BanDialog.h  BansDialog.cpp  BansDialog.h  BasicSplitter.cpp  BasicSplitter.h  GuiSettingDefaults.h  GuiSettingIds.h  GuiSettingManager.cpp  GuiSettingManager.h  GuiSettingStr.h  GuiUtil.cpp  GuiUtil.h  LineDialog.cpp  LineDialog.h  MainWindow.cpp  MainWindow.h  MainWindowPage.cpp  MainWindowPage.h  MainWindowPageScripts.cpp  MainWindowPageScripts.h  MainWindowPageStats.cpp  MainWindowPageStats.h  MainWindowPageUsersChat.cpp  MainWindowPageUsersChat.h  ProfilesDialog.cpp  ProfilesDialog.h  PtokaX.cpp  PtokaX.rc  RangeBanDialog.cpp  RangeBanDialog.h  RangeBansDialog.cpp  RangeBansDialog.h  RegisteredUserDialog.cpp  RegisteredUserDialog.h  RegisteredUsersDialog.cpp  RegisteredUsersDialog.h  Resources.h  (+32 more)
json/: json.hpp
jsoncpp/: jsoncpp.cpp
language/: Brazilian Portuguese.xml  Cesky.xml  Chinese_Simplified.xml  Danish.xml  Espanol.xml  French.xml  Hebrew.xml  Hungarian.xml  Italian.xml  Nederlands.xml  Polish.xml  Portugues.xml  Romanian.xml  Russian.xml  Svenska.xml  Turkish.xml
lua/src/: loslib.c  luaconf.h
prometheus-cpp/core/include/prometheus/detail/: core_export.h
prometheus-cpp/pull/include/prometheus/detail/: pull_export.h
scripting.docs/: scripting-interface.txt
skein/: makefile
skein/Additional_Implementations/: skein_block_x64.asm  skein_block_x86.asm  skein_block_xmm32.asm  skein_rot_search2.c  skein_test.c
skein/KAT_MCT/: Readme.txt
sqlite/: sqlite3.h  sqlite3ext.h  sqlite3x.hpp  sqlite3x_connection.cpp  sqlite3x_transaction.cpp  sqlite_fly.h
tinyxml/: tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  xmltest.cpp
zlib-ng/: functable.c
